# template4bats

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README.md
inc/CommandLine/: commandline.h
inc/MyAgent/: myagent.h
inc/Other/: tools.h
src/: dribbleagent.h  main.cc
src/CommandLine/: commandline.cc
src/MyAgent/: init.cc  think.cc
